<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#333"
    android:layout_gravity="center_horizontal">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/Profile_Image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:foregroundGravity="center_horizontal"
            android:src="@drawable/saboor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:text="@string/imrankhan"
            android:textColor="#fff"
            android:textStyle="bold" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="144dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/ic_portrait_black_24dp"
                android:gravity="center_horizontal" />

            <Button
                android:id="@+id/btViewProfile"
                android:layout_width="67dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:background="@color/colorGreen"
                android:padding="5dp"
                android:text="@string/viewprofile"
                android:textColor="#fff" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="57dp"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/ic_person_add_black_24dp"
                android:gravity="center_horizontal"
                android:outlineAmbientShadowColor="@color/colorGreen" />

            <Button
                android:id="@+id/btSendRequest"
                android:layout_width="74dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/colorGreen"
                android:padding="5dp"
                android:text="@string/sendrequest"
                android:textColor="#fff" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <Button
                android:layout_width="51dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/ic_message_black_24dp"
                android:gravity="center_horizontal" />

            <Button
                android:id="@+id/btSendMessge"
                android:layout_width="81dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@color/colorGreen"
                android:padding="5dp"
                android:text="@string/sendmsg"
                android:textColor="#fff" />

        </LinearLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>